--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.formatting.provider": "yapf"
+    "python.formatting.provider": "yapf",
+    "jupyter.jupyterServerType": "local",
+    "python.pythonPath": "/bin/python3"
 }
